--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 <body>
     <div class="container">
         <button type="button" id="abc" class="btn btn-primary" onclick="lol()">London</button>
-        <div id="test">Voici ma div</div>
+        <div id="test">
+            <p>test</p>
+        </div>
     </div>
 </body>
 
