--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
         <button type="button" id="abc" class="btn btn-primary" onclick="lol()">London</button>
         <div id="test">
-            <p>test</p>
+            <p>Je fais un test</p>
         </div>
     </div>
 </body>
