--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Bootstrap 5.2.0 for responsive -->
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
+    <script type="text/javascript" src="js/bootstrap/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap/bootstrap.bundle.min.js"></script>
     <!-- Stylesheet -->
     <link rel="stylesheet" href="css/styles/style.css">
     <!-- jQuery 3.6.0 -->
