--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
     <div class="container">
-        <button type="button" id="abc" class="btn btn-primary" onclick="lol()">London</button>
+        <button type="button" id="abc" class="btn btn-primary" onclick="lol()">Paris</button>
         <div id="test">
             <p>Je fais un test</p>
         </div>
