--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <!-- Title -->
-    <title>Weather</title>
+    <title>Météhenchoz</title>
     <!-- Encoding and responsive -->
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -24,7 +24,7 @@
 
 <body>
     <div class="container">
-        <button type="button" id="abc" class="btn btn-primary" onclick="lol()">Paris</button>
+        <button type="button" id="abc" class="btn btn-primary" onclick="lol()">Bulle</button>
         <div id="test">
             <p>Je fais un test</p>
         </div>
