--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 </head>
 
 <body>
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-md sticky-top navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#" onclick="window.location.reload(true);">Météhenchoz</a>
@@ -34,19 +35,22 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Link</a>
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                    <input class="form-control me-2" type="search" placeholder="Rechercher une ville"
+                        aria-label="Rechercher une ville">
+                    <button class="btn btn-outline-primary" type="submit">Rechercher</button>
                 </form>
             </div>
         </div>
     </nav>
+    <!-- End Navbar -->
+
     <!-- <div class="container">
         <button type="button" id="abc" class="btn btn-primary" onclick="lol()">Bulle</button>
         <div id="test">
