--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" aria-current="page" href="#">Météo actuelle</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Link</a>
