--- a/index.html
+++ b/index.html
@@ -25,7 +25,128 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-md sticky-top navbar-light bg-light">
+    <nav id="navbar-example2" class="navbar navbar-light bg-light px-3 sticky-top">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <ul class="nav nav-pills">
+            <li class="nav-item">
+                <a class="nav-link" href="#scrollspyHeading1">First</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#scrollspyHeading2">Second</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+                    aria-expanded="false">Dropdown</a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#scrollspyHeading3">Third</a></li>
+                    <li><a class="dropdown-item" href="#scrollspyHeading4">Fourth</a></li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li><a class="dropdown-item" href="#scrollspyHeading5">Fifth</a></li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
+    <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example"
+        tabindex="0">
+        <h4 id="scrollspyHeading1">First heading</h4>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+        <h4 id="scrollspyHeading2">Second heading</h4>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+        <h4 id="scrollspyHeading3">Third heading</h4>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+        <h4 id="scrollspyHeading4">Fourth heading</h4>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+        <h4 id="scrollspyHeading5">Fifth heading</h4>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi eaque assumenda. Odio in voluptate
+            officia, distinctio quae cumque fugit libero quaerat facilis quibusdam? Harum nihil fugiat quod laudantium!
+            Earum.</p>
+    </div>
+    <!-- <nav class="navbar navbar-expand-md sticky-top navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#" onclick="window.location.reload(true);">Météhenchoz</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
@@ -48,7 +169,7 @@
                 </form>
             </div>
         </div>
-    </nav>
+    </nav> -->
     <!-- End Navbar -->
 
     <!-- <div class="container">
