--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
     <!-- Start navbar -->
-    <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg top-0 navbar-light bg-light">
         <div class="container-fluid">
             <!-- Title on the left -->
             <a class="navbar-brand" href="#" onclick="reloadPage();">Météhenchoz</a>
@@ -38,17 +38,17 @@
                 <!-- Menus -->
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Home</a>
+                        <a class="nav-link active" href="#test1">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="#test2">Link</a>
                     </li>
                 </ul>
                 <!-- Search -->
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Rechercher une ville"
                         aria-label="Rechercher une ville">
-                    <button class="btn btn-outline-primary" type="submit">Rechercher</button>
+                    <button class="btn btn-outline-primary" type="button" onclick="reloadPage();">Rechercher</button>
                 </form>
             </div>
             <!-- End List of menus -->
@@ -57,7 +57,7 @@
     <!-- End navbar -->
 
     <div class="content">
-        <h1 style="margin-top: 56px;">test 1</h1>
+        <h1 id="test1">test 1</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, atque consequuntur dicta, necessitatibus
             velit expedita, repellendus ipsam magnam doloremque aut molestias dolorum vitae. Ratione, perferendis
             blanditiis repudiandae hic sed quas?Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, atque consequuntur dicta, necessitatibus
@@ -117,7 +117,7 @@
             blanditiis repudiandae hic sed quas?Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, atque consequuntur dicta, necessitatibus
             velit expedita, repellendus ipsam magnam doloremque aut molestias dolorum vitae. Ratione, perferendis
             blanditiis repudiandae hic sed quas?</p>
-        <h1>test 2</h1>
+        <h1 id="test2">test 2</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, atque consequuntur dicta, necessitatibus
             velit expedita, repellendus ipsam magnam doloremque aut molestias dolorum vitae. Ratione, perferendis
             blanditiis repudiandae hic sed quas?Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, atque consequuntur dicta, necessitatibus
