--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- jQuery 3.6.0 -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="css/styles/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- main Ctrl JS -->
     <script type="text/javascript" src="js/ctrl/mainCtrl.js"></script>
 </head>
