--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="fr-ch">
 
 <head>
-    <!-- Title -->
+    <!-- Titlee -->
     <title>Météhenchoz</title>
     <!-- Encoding and responsive -->
     <meta charset="UTF-8">
