--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- Stylesheet -->
     <link rel="stylesheet" href="css/style.css">
-    <!-- main Ctrl JS -->
+    <!-- All Ctrl JS -->
     <script type="text/javascript" src="js/mainCtrl.js"></script>
 </head>
 
@@ -28,7 +28,7 @@
     <nav class="navbar navbar-expand-lg top-0 navbar-light bg-light">
         <div class="container-fluid">
             <!-- Title on the left -->
-            <a class="navbar-brand" href="#" onclick="reloadPage();">Météhenchoz</a>
+            <a class="navbar-brand" href="index.html">Météhenchoz</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -55,7 +55,18 @@
         </div>
     </nav>
     <!-- End navbar -->
-    
+
+    <!-- Start main content -->
+    <main class="flex-shrink-0">
+        <!-- Start views -->
+        <div class="container-fluid" id="views"><p>Test</p></div>
+        <!-- End views -->
+    </main>
+    <!-- End main content -->
+
+    <!-- Start footer -->
+
+    <!-- End footer -->
 </body>
 
 </html>
@@ -64,5 +75,4 @@
         <button type="button" id="abc" class="btn btn-primary" onclick="lol()">Bulle</button>
         <div id="test">
             <p>Je fais un test</p>
-        </div>
-    </div> -->
+        </div></div> -->
