--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- Start main content -->
     <main class="flex-shrink-0">
         <!-- Start views -->
-        <div class="container-fluid" id="views"><p>Test</p></div>
+        <div class="container-fluid" id="views"></div>
         <!-- End views -->
     </main>
     <!-- End main content -->
