--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <script src="js/bootstrap/bootstrap.bundle.min.js"></script>
     <!-- My stylesheet -->
     <link rel="stylesheet" href="css/styles/styles.css">
-    <!-- CDN jQuery 3.6.0 -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- jQuery 3.6.0 -->
+    <script src="js/jQuery/jquery-3.6.0.min.js"></script>
     <!-- All Ctrl JS -->
-    <script type="text/javascript" src="js/mainCtrl.js"></script>
+    <script type="text/javascript" src="js/ctrls/mainCtrl.js"></script>
 </head>
 
 <body>
