--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <!-- Start navbar -->
-    <nav class="navbar navbar-expand-lg top-0 navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg top-0 navbar-light bg-light sticky-top">
         <div class="container-fluid">
             <!-- Title on the left -->
             <a class="navbar-brand" href="index.html">Météhenchoz</a>
@@ -55,13 +55,115 @@
     <!-- End navbar -->
 
     <!-- Start main content -->
-    <div id="site-content"></div> 
-    <div id="site-footer"></div>
+    <main>
+        <div class="container-fluid" id="views">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
+            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
+            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
+            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.
+        </div>
+    </main>
     <!-- End main content -->
 
     <!-- Start footer -->
-    
+    <footer>
+        <div class="container">
+            <p class="text-center">Footer</p>
+        </div>
+    </footer>
     <!-- End footer -->
+
 </body>
 
 </html>
