--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 </head>
 
 <body>
+
     <!-- Start navbar -->
-    <nav class="navbar navbar-expand-lg top-0 navbar-light bg-light sticky-top">
+    <nav class="navbar navbar-expand-md top-0 navbar-light bg-light sticky-top">
         <div class="container-fluid">
             <!-- Title on the left -->
             <a class="navbar-brand" href="index.html">Météhenchoz</a>
@@ -34,7 +35,13 @@
             <!-- Start List of menus -->
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <!-- Menus -->
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Link</a>
                     </li>
@@ -56,108 +63,12 @@
 
     <!-- Start main content -->
     <main>
-        <div class="container-fluid" id="views">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur veritatis totam alias impedit excepturi,
-            unde veniam! Sunt, deserunt repellendus, error itaque qui blanditiis atque mollitia, dignissimos quasi esse
-            officia quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, enim sed, necessitatibus dolores
-            esse illo at nisi quis beatae ut culpa eligendi sunt nobis aperiam et quo fugit iusto consectetur.
-        </div>
+        <div class="container-fluid" id="views"></div>
     </main>
     <!-- End main content -->
 
     <!-- Start footer -->
-    <footer>
+    <footer class="bottom-0 position-fixed">
         <div class="container">
             <p class="text-center">Footer</p>
         </div>
