--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
 </html>
 
 <!-- <div class="container">
-        <button type="button" id="abc" class="btn btn-primary" onclick="lol()">Bulle</button>
-        <div id="test">
-            <p>Je fais un test</p>
-        </div></div> -->
+    <button type="button" id="abc" class="btn btn-primary" onclick="lol()">Bulle</button>
+    <div id="test">
+        <p>Je fais un test</p>
+    </div>
+</div> -->
