--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!-- 
+   But     : Page principale  
+   Auteur  : Noé Henchoz
+   Date    : 26.05.2022 / v1.0 
+-->
+
 <!DOCTYPE html>
 
 <html lang="fr-ch">
@@ -18,6 +24,8 @@
     <!-- jQuery 3.6.0 -->
     <script src="js/jQuery/jquery-3.6.0.min.js"></script>
     <!-- All Ctrl JS -->
+    <script type="text/javascript" src="js/ctrls/mainCtrl.js"></script>
+    <script type="text/javascript" src="js/ctrls/mainCtrl.js"></script>
     <script type="text/javascript" src="js/ctrls/mainCtrl.js"></script>
 </head>
 
