--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <!-- jQuery 3.6.0 -->
     <script src="js/jQuery/jquery-3.6.0.min.js"></script>
     <!-- All Ctrl JS -->
-    <script type="text/javascript" src="js/ctrls/mainCtrl.js"></script>
-    <script type="text/javascript" src="js/ctrls/mainCtrl.js"></script>
-    <script type="text/javascript" src="js/ctrls/mainCtrl.js"></script>
+    <script type="text/javascript" src="js/ctrls/indexCtrl.js"></script>
+    <script type="text/javascript" src="js/ctrls/httpServ.js"></script>
+    <script type="text/javascript" src="js/ctrls/homeCtrl.js"></script>
 </head>
 
 <body>
@@ -45,6 +45,9 @@
                 <!-- Menus -->
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
+                        <a class="nav-link" href="#">Prévisions</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#">a</a>
                     </li>
                     <li class="nav-item">
@@ -52,9 +55,6 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">c</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">d</a>
                     </li>
                 </ul>
                 <!-- Search -->
