--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <script type="text/javascript" src="js/ctrls/indexCtrl.js"></script>
     <script type="text/javascript" src="js/ctrls/httpServ.js"></script>
     <script type="text/javascript" src="js/ctrls/homeCtrl.js"></script>
+    <!-- Icon from font-awesome.com -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -76,9 +80,26 @@
     <!-- End main content -->
 
     <!-- Start footer -->
-    <footer class="bottom-0 position-fixed">
-        <div class="container">
-            <p class="text-center">Footer</p>
+    <footer class="bg-light text-center text-white bottom-0 position-fixed">
+        <div class="container p-4 pb-0">
+            <section class="mb-4">
+                <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998;" href="#!"
+                    role="button"><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee;" href="#!"
+                    role="button"><i class="fab fa-twitter"></i></a>
+                <a class="btn btn-primary btn-floating m-1" style="background-color: #dd4b39;" href="#!"
+                    role="button"><i class="fab fa-google"></i></a>
+                <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac;" href="#!"
+                    role="button"><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca;" href="#!"
+                    role="button"><i class="fab fa-linkedin-in"></i></a>
+                <a class="btn btn-primary btn-floating m-1" style="background-color: #333333;" href="#!"
+                    role="button"><i class="fab fa-github"></i></a>
+            </section>
+        </div>
+
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            © 2022 - Conçu par <a class="text-white text-decoration-none" href="mailto:noe.henchoz@studentfr.ch">Noé Henchoz</a>
         </div>
     </footer>
     <!-- End footer -->
