--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <!-- Start List of menus -->
+            <!-- List of menus -->
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <!-- Menus -->
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
@@ -80,26 +80,25 @@
     <!-- End main content -->
 
     <!-- Start footer -->
-    <footer class="bg-light text-center text-white bottom-0 position-fixed">
+    <footer class="bg-gradient text-center text-white bottom-0 position-fixed">
         <div class="container p-4 pb-0">
             <section class="mb-4">
-                <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998;" href="#!"
-                    role="button"><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee;" href="#!"
-                    role="button"><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-primary btn-floating m-1" style="background-color: #dd4b39;" href="#!"
-                    role="button"><i class="fab fa-google"></i></a>
-                <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac;" href="#!"
-                    role="button"><i class="fab fa-instagram"></i></a>
-                <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca;" href="#!"
-                    role="button"><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-primary btn-floating m-1" style="background-color: #333333;" href="#!"
-                    role="button"><i class="fab fa-github"></i></a>
+                <!-- List of networks -->
+                <a class="btn btn-light m-1" style="background-color: #1DA1F2; color: white;"
+                    href="https://twitter.com/henchoznoe" role="button" target="_blank"><i
+                        class="fab fa-twitter"></i></a>
+                <a class="btn btn-light m-1"
+                    style="background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%); color: white;"
+                    href="https://www.instagram.com/henchoznoe/" role="button" target="_blank"><i
+                        class="fab fa-instagram"></i></a>
+                <a class="btn btn-light m-1" style="background-color: #333333; color: white;"
+                    href="https://github.com/ARATY7" role="button" target="_blank"><i class="fab fa-github"></i></a>
             </section>
         </div>
 
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-            © 2022 - Conçu par <a class="text-white text-decoration-none" href="mailto:noe.henchoz@studentfr.ch">Noé Henchoz</a>
+            © 2022 - Conçu par <a class="text-white text-decoration-none" href="mailto:noe.henchoz@studentfr.ch">
+                Noé Henchoz</a>
         </div>
     </footer>
     <!-- End footer -->
