--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script type="text/javascript" src="js/ctrls/indexCtrl.js"></script>
     <script type="text/javascript" src="js/ctrls/httpServ.js"></script>
     <script type="text/javascript" src="js/ctrls/homeCtrl.js"></script>
+    <script type="text/javascript" src="js/ctrls/footerCtrl.js"></script>
     <!-- Icon from font-awesome.com -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
