--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
                         <a class="nav-link" href="#">Prévisions</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">a</a>
+                        <a class="nav-link" href="#">Documentation</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">b</a>
+                        <a class="nav-link" href="#">API</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">c</a>
+                        <a class="nav-link" href="#">A propos</a>
                     </li>
                 </ul>
                 <!-- Search -->
