--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
                 <!-- Menus -->
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Prévisions</a>
+                        <a class="nav-link" href="#" id="a-forecast">Prévisions</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Documentation</a>
+                        <a class="nav-link" href="#" id="a-documentation">Documentation</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">API</a>
+                        <a class="nav-link" href="#" id="a-api">API</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">A propos</a>
+                        <a class="nav-link" href="#" id="a-about">A propos</a>
                     </li>
                 </ul>
                 <!-- Search -->
